<resources>
    <string name="app_name">BMR Calculator</string>
    <string name="gender">Select your gender</string>
    <string name="unit">Select The unit</string>
    <string name="weight">Set your weight (Kg/lb)</string>
    <string name="height">how tall are you? (cm/inch)</string>
    <string name="age">How old are you?</string>
    <string name="calculate">Calculate</string>
    <string name="empty_fields">You must fill all the fields above!</string>
    <string name="bmr_is">Your BMR is:</string>
    <string name="know_needs">Would you like to know your caloric needs?</string>
    <string name="select_lifestyle">Select your lifestyle (gym exercises are not included):</string>
    <string name="sedentary_life">Sedentary life</string>
    <string name="busy_life_walk_a_lot_etc">Busy life (walk a lot etc..)</string>
    <string name="very_intense_lifestyle">Very intense lifestyle</string>
    <string name="calculator_menu">Calculator</string>
    <string name="about_menu">About</string>
    <string name="you_need_cal">You need:</string>
    <string name="bmr_info">Basal metabolic rate (BMR) is the rate of energy expenditure per unit time by endothermic animals at rest. Proper measurement requires a strict set of criteria be met.Metabolism comprises the processes that the body needs to function. Basal metabolic rate is the amount of energy per unit time that a person needs to keep the body functioning at rest. Some of those processes are breathing, blood circulation, controlling body temperature, cell growth, brain and nerve function, and contraction of muscles. Basal metabolic rate (BMR) affects the rate that a person burns calories and ultimately whether that individual maintains, gains, or loses weight. Several equations to predict the number of calories required by humans.</string>
    <string name="bmr_title">What is the BMR?</string>
    <string name="source_text">Source: Wikipedia</string>

    <string-array name="gender_names">
        <item> Male</item>
        <item> Female</item>
    </string-array>

    <string-array name="unit_names">
        <item> Metric</item>
        <item> Imperial</item>
    </string-array>


</resources>
